[tool.poetry]
name = "redditlike-js-docs"
version = "0.1.0"
description = ""
authors = ["Onion, Kim <onion.kim@intel.com>"]
readme = "README.md"
packages = [{include = "redditlike"}]

[tool.poetry.dependencies]
python = "^3.10"
myst-parser = "^3.0.1"
furo = "^2024.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
